--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                 <label for="lowercase">Includes Lowercase letters</label>
             </div>
 
+            <div>
+                <input type="checkbox" id="numbers">
+                <label for="numbers">Includes Numbers </label>
+            </div>
+
+            <div>
+                <input type="checkbox" id="symbols">
+                <label for="symbols">Includes Symbols </label>
+            </div>
 
             <!-- strength section-->
             <div class="strength-container">
